# jobdam

./: README.md  pyproject.toml
jobdam/: config.json  config.py  constants.py
jobdam/api/: auth_api.py  chat_api.py
jobdam/ui/: main.css  main.py
jobdam/ui/modals/: error_modal.py  leave_room_modal.py  room_setting_modal.py
jobdam/ui/screens/: chat_screen.py  home_screen.py  login_screen.py  register_screen.py  search_room_screen.py
jobdam/ui/widgets/: chat_widget.py  home_widget.py  login_widget.py  register_widget.py  search_room_widget.py
jobdam/utils/: auth_utils.py  global_utils.py
